--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -10,6 +10,7 @@ class="ion-no-border"
      
      <ion-item>
         <ion-select
+          mode="ios"
           fill="none"
           justify="space-between"
           label="Select Gym"
