--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -20,7 +20,7 @@ ion-select::part(text) {
   min-height: 10px;
 }
 ion-searchbar {
-  // margin-top: 12px;
+  margin-top: 4px;
   margin-left: 62px;
   width: 68%;
   --opacity:10;
