--- a/front-end/src/app/pages/membercontrol/membercontrol.page.html
+++ b/front-end/src/app/pages/membercontrol/membercontrol.page.html
@@ -43,7 +43,7 @@
           [showDefaultButtons]="true"
           
           [value]="endDateValue"
-          [min]="Start_Date" 
+          [min]="startDateValue" 
           presentation="date" 
           id="edate" 
           #edate
