--- a/front-end/src/app/pages/member-details/member-details.page.scss
+++ b/front-end/src/app/pages/member-details/member-details.page.scss
@@ -22,3 +22,56 @@ ion-header {
     }
   }
 }
+
+ion-content {
+  >div {
+    >ion-spinner {
+    }
+  }
+  >ion-list {
+    >ion-list-header {
+      >ion-label.ion-padding {
+        >h2 {
+          font-size: 25px;
+          font-weight: 800;
+          >strong {
+          }
+        }
+      }
+    }
+    >ion-item:nth-of-type(1) {
+      >ion-icon {
+      }
+      >ion-label.ion-padding {
+      }
+    }
+    >ion-item:nth-of-type(2) {
+      >ion-icon {
+      }
+      >ion-label.ion-padding {
+      }
+    }
+    >ion-item:nth-of-type(3) {
+      >ion-icon {
+      }
+      >ion-label.ion-padding {
+      }
+    }
+    >ion-item:nth-of-type(4) {
+      >ion-icon {
+      }
+      >ion-label.ion-padding {
+      }
+    }
+    >ion-item:nth-of-type(5) {
+      >ion-icon {
+      }
+      >ion-label.ion-padding {
+      }
+    }
+    >ion-button {
+      >ion-icon {
+      }
+    }
+  }
+}
