qr code corrected on action page

--- a/front-end/src/app/pages/me/me.page.html
+++ b/front-end/src/app/pages/me/me.page.html
@@ -1,5 +1,9 @@
  
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
   <div *ngIf="isLoadingResults">
     <ion-spinner *ngIf="isLoadingResults" ></ion-spinner>
   </div>
