--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -105,16 +105,16 @@ ion-content {
 // for avatar
 $colors: #a2b9bc,#6b5b95,#feb236, #d64161, #ff7b25, #b2ad7f,  #878f99;
 .avatar {
-  color: #eb7575;
+  color: var(--ion-color-primary);
   padding: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100%;
-  width: 60px;
-  // height: 60px;
+  width: 55px;
+  height: 58px;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 42px;
   }
 
   @for $i from 1 through length($colors) {
