--- a/front-end/src/app/static/personalinformation/personalinformation.page.html
+++ b/front-end/src/app/static/personalinformation/personalinformation.page.html
@@ -98,6 +98,21 @@
   </ion-list>
 </div>
 
+<!-- <div>
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Joined Property</ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>Pokémon Yellow</ion-label>
+    </ion-item>
+  </ion-list>
+
+</div>
+
+use this block for multiple gym join of member -->
+
 
 
 </ion-content>
