--- a/front-end/src/app/static/privacy-policy/privacy-policy.page.html
+++ b/front-end/src/app/static/privacy-policy/privacy-policy.page.html
@@ -7,7 +7,7 @@
     </ion-toolbar>  
   </ion-header>
       <ion-content>
-        <div>
+        <div class="ion-padding">
                     <p>Last updated: April 05, 2023</p>
                     <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
                     <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p>
@@ -24,7 +24,7 @@
                     <p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where &quot;control&quot; means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p>
                     </li>
                     <li>
-                    <p><strong>Application</strong> refers to JENIX, the software program provided by the Company.</p>
+                    <p><strong>Application</strong> refers to "QR-UNLOCK", the software program provided by the Company.</p>
                     </li>
                     <li>
                     <p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Jain Enterprises, Jaipur.</p>
@@ -63,7 +63,7 @@
                     <p>First name and last name</p>
                     </li>
                     <li>
-                    <p>Phone number</p>
+                    <p>Mobile number</p>
                     </li>
                     <li>
                     <p>Address, State, Province, ZIP/Postal code, City</p>
@@ -164,7 +164,7 @@
                     <h1>Contact Us</h1>
                     <p>If you have any questions about this Privacy Policy, You can contact us:</p>
                     <ul>
-                    <li>By email: JENIXjain@gmail.com</li>
+                    <li>By email: jenixjain@gmail.com</li>
                     </ul>
 </div>
 </ion-content>
