--- a/front-end/src/app/static/terms-condition/terms-condition.page.html
+++ b/front-end/src/app/static/terms-condition/terms-condition.page.html
@@ -8,7 +8,7 @@
   </ion-toolbar>  
 </ion-header>
     <ion-content>
-      <div>
+      <div class="ion-padding">
                 <p>
                   By downloading or using the app, these terms will
                   automatically apply to you – you should make sure therefore
@@ -19,16 +19,16 @@
                   to translate the app into other languages or make derivative
                   versions. The app itself, and all the trademarks, copyright,
                   database rights, and other intellectual property rights related
-                  to it, still belong to KJIOP.
+                  to it, still belong to "Jain Enterprises".
                 </p> <p>
-                  KJIOP is committed to ensuring that the app is
+                  "Jain Enterprises" is committed to ensuring that the app is
                   as useful and efficient as possible. For that reason, we
                   reserve the right to make changes to the app or to charge for
                   its services, at any time and for any reason. We will never
                   charge you for the app or its services without making it very
                   clear to you exactly what you’re paying for.
                 </p> <p>
-                  The JXUUJ app stores and processes personal data that
+                  The "QR-UNLOCK" app stores and processes personal data that
                   you have provided to us, to provide our
                   Service. It’s your responsibility to keep your phone and
                   access to the app secure. We therefore recommend that you do
@@ -37,7 +37,7 @@
                   official operating system of your device. It could make your
                   phone vulnerable to malware/viruses/malicious programs,
                   compromise your phone’s security features and it could mean
-                  that the JXUUJ app won’t work properly or at all.
+                  that the "QR-UNLOCK" app won’t work properly or at all.
                 </p> <div><p>
                     The app does use third-party services that declare their
                     Terms and Conditions.
@@ -46,10 +46,10 @@
                     providers used by the app
                   </p> <ul><li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
                   You should be aware that there are certain things that
-                  KJIOP will not take responsibility for. Certain
+                  "Jain Enterprises" will not take responsibility for. Certain
                   functions of the app will require the app to have an active
                   internet connection. The connection can be Wi-Fi or provided
-                  by your mobile network provider, but KJIOP
+                  by your mobile network provider, but "Jain Enterprises"
                   cannot take responsibility for the app not working at full
                   functionality if you don’t have access to Wi-Fi, and you don’t
                   have any of your data allowance left.
@@ -70,21 +70,21 @@
                   received permission from the bill payer for using the app.
                 </p> 
                 <p>
-                  Along the same lines, KJIOP cannot always take
+                  Along the same lines, "Jain Enterprises" cannot always take
                   responsibility for the way you use the app i.e. You need to
                   make sure that your device stays charged – if it runs out of
                   battery and you can’t turn it on to avail the Service,
-                  KJIOP cannot accept responsibility.
+                  "Jain Enterprises" cannot accept responsibility.
                 </p> 
                 <p>
-                  With respect to KJIOP’s responsibility for your
+                  With respect to "QR-UNLOCK"’s responsibility for your
                   use of the app, when you’re using the app, it’s important to
                   bear in mind that although we endeavor to ensure that it is
                   updated and correct at all times, we do rely on third parties
                   to provide information to us so that we can make it available
-                  to you. KJIOP accepts no liability for any
+                  to you. "Jain Enterprises" accepts no liability for any
                   loss, direct or indirect, you experience as a result of
-                  relying wholly on this functionality of the app.
+                  relying wholly on the functionalities of the app.
                 </p> 
                 <p>
                   At some point, we may wish to update the app. The app is
@@ -92,7 +92,7 @@
                   both systems(and for any additional systems we
                   decide to extend the availability of the app to) may change,
                   and you’ll need to download the updates if you want to keep
-                  using the app. KJIOP does not promise that it
+                  using the app. "Jain Enterprises" does not promise that it
                   will always update the app so that it is relevant to you
                   and/or works with the Android &amp; iOS version that you have
                   installed on your device. However, you promise to always
@@ -119,7 +119,7 @@
                 <p>
                   If you have any questions or suggestions about our
                   Terms and Conditions, do not hesitate to contact us
-                  at JXUUHG@gmail.com.
+                  at jenixjain@gmail.com.
                 </p> 
 
               </div>
