--- a/front-end/src/app/pages/member-action/member-action.page.scss
+++ b/front-end/src/app/pages/member-action/member-action.page.scss
@@ -165,24 +165,33 @@ ion-content{
 
 
 
-  .scanner-buttons{
+  .scanner-stop{
     margin:0px;
     position:absolute;
-    bottom:100px;
+    // bottom:100px;
     width:100vw;
     height:50px;
     z-index:11;
+    ion-icon{      
+      font-size:25px;
+    }
+    p{
+    margin-left: 30%;
+    font-size: 18px;
+    font-weight: 600;
+    }
   }
 
   .scan-box{
     border:2px solid #fff;
+    border-radius: 10px;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
     content:'';
     display:block;
     left:50%;
-    height: 300px;
+    height: 250px;
     position:absolute;
     top:50%;
     transform: translate(-50%,-50%);
-    width:300px
+    width:250px
   }
