--- a/front-end/src/app/static/about/about.page.html
+++ b/front-end/src/app/static/about/about.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Back" defaultHref="settings"> </ion-back-button>
+      <ion-button text="Back" (click)="backToSettings()"> Back</ion-button>
     </ion-buttons>
     <ion-title>About</ion-title>
   </ion-toolbar>  
