--- a/front-end/src/app/pages/qrlabel/qrlabel.page.scss
+++ b/front-end/src/app/pages/qrlabel/qrlabel.page.scss
@@ -1,148 +1,98 @@
-#pagebg{
-    background: #f7efef;
-}
-
-#bg {
+ion-content#downloadme {
+  >div#bg {
     height: 25%;
     width: 100%;
     background: var(--ion-color-primary);
-    background-image: url("/assets/img/qrlabel.jpg") no-repeat center center/cover;
+   
     border-radius: 0 0 45% 45%;
     margin-left: 1px;
     position: relative;
-}
-
-#boldfont{
-    font-weight: 1000;
-        font-size: 1.5rem;
+    >ion-label {
+         
+      >h1.p:nth-of-type(1),h2.p,h1.p:nth-of-type(2) {
+        padding-top: 10px;
+        top: margin px;
+        font-weight: 1000;
+        font-size: 1.4rem;
+        position: relative;
+        // padding-left: 5vw;
         justify-content: center;
         display: flex;
         align-content: center;
         align-items: center;
-        width: 100%;
-}
-
-ion-list {
-    margin-top: 1vh;
-    
-    ion-item {
+        width: 100%; 
+        color:#ffffff;
+        
+      }
+    }
+  }
+  >div#qrbox {
+    >ion-list.ion-margin {
+        margin-top: 1vh;  
+      >ion-label {
+        >h1 {
+            padding-top: 10px;
+        top: margin px;
+        font-weight: 1000;
+        font-size: 1.6rem;
+        position: relative;
+        // padding-left: 5vw;
+        justify-content: center;
+        display: flex;
+        align-content: center;
+        align-items: center;
+        width: 100%; 
+        }
+      }
+      >ion-item {
         border: 1px solid var(--ion-color-light);
         border-radius: 20px;
-        justify-content: center;
         -webkit-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
         -moz-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
         box-shadow: 0 6px 4px -4px var(--ion-color-medium);
+        >div.center {
+          >qrcode#qr_code img {
+          }
+        }
+      }
+      >ion-text {
+        >h2{
+        padding-top: 10px;
+        
+        font-weight: 600;
+        font-size: 1.25rem;
         position: relative;
+        // padding-left: 5vw;
+        justify-content: center;
         display: flex;
         align-content: center;
         align-items: center;
-        width: 100%;
-        font-weight: 1000;
-        font-size: 1.5rem;
+        width: 100%; 
+        }
+      }
     }
-    
-}
-
-.p {
-    padding-top: 10px;
-    top: margin px;
-    font-weight: 1000;
-    font-size: 1.4rem;
-    position: relative;
-    // padding-left: 5vw;
-    justify-content: center;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 100%;    
-}
-
-.p1 {
-    padding-top: 10px;
-    top: margin px;
-    font-weight: 1000;
-    font-size: 1.8rem;
-    position: relative;
-    // padding-left: 5vw;
-    justify-content: center;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 100%;    
-}
-
-.p2 {
-    padding-top: 10px;
-    top: margin px;
-    font-weight: 1000;
-    font-size: 1rem;
-    position: relative;
-    // padding-left: 5vw;
-    justify-content: center;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 100%;
-    
-}
-
-.p3 {
-    padding-top: 2px;
-    // top: margin 1px;
-    font-weight: 500;
-    font-size: 1.2rem;
-    position: relative;
-    // padding-left: 5vw;
-    justify-content: center;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 100%;
-    
-}
-
-.div-1 {
-         
-    background: whitesmoke;       
-    
-    margin-top:10px;
-    margin-right: 10px;
-    margin-left: 10px;
-
-    padding-top:20px;
-    padding-right: 5px;
-    padding-left: 5px;
-
-    border-radius: 20px;
-    border: 5px solid #bebebe;
-    min-height: 200px; 
-
-    -webkit-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-    -moz-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-        box-shadow: 0 6px 4px -4px var(--ion-color-medium);
   }
-
-  .div-2 {
-         
-    background: whitesmoke;          
+  >ion-item {
+    min-height: 2vh;
+    ion-thumbnail {
+        --size: 70px;
+        --border-radius: 14px;
+      }
     
-    margin-top:10px;
-    margin-right: 10px;
-    margin-left: 10px;
+    ion-label{
+        font-size: 20px;
+        font-weight: 700;
+        position: relative;
+        // padding-left: 5vw;
+        justify-content: center;
+        display: flex;
+        // align-content: center;
+        // align-items: center;
+        
+    }
 
-    padding-top:20px;
-    padding-right: 5px;
-    padding-left: 5px;
-
-    border-radius: 20px;
-    border: 5px solid #bebebe;
-    min-height: 50px; 
-
-    -webkit-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-    -moz-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-    box-shadow: 0 6px 4px -4px var(--ion-color-medium);
   }
-
+}
    
   /* Add custom styles here */
   .center {
@@ -151,23 +101,4 @@ ion-list {
     display: flex;
     flex: 2;
     justify-content: center;
-  }
-
-  ion-button { 
-    --webkit-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-    --moz-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-  
-    --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
-  
-    --ripple-color: rgb(20, 255, 51);
-  
-  }
-
-  .item-1{
-        border: 1px solid var(--ion-color-light);
-        border-radius: 20px;
-        -webkit-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-        -moz-box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-        box-shadow: 0 6px 4px -4px var(--ion-color-medium);
-         
   }
