--- a/front-end/src/app/pages/gymtabs/gymtabs.page.html
+++ b/front-end/src/app/pages/gymtabs/gymtabs.page.html
@@ -10,7 +10,7 @@
     
     <ion-tab-button tab="infor">
       <ion-icon [name]="selectedTab=='infor'?'fitness':'fitness-outline'"></ion-icon>
-      <ion-label>My Gym</ion-label>
+      <ion-label>My Property</ion-label>
     </ion-tab-button>
     
 
