--- a/front-end/src/app/pages/membertabs/membertabs.page.html
+++ b/front-end/src/app/pages/membertabs/membertabs.page.html
@@ -3,7 +3,7 @@
 
     <ion-tab-button tab="member-action">
       <ion-icon name="home"></ion-icon>
-      <ion-label>My Gym</ion-label>
+      <ion-label>Property</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="memberinfor">
