--- a/front-end/src/app/pages/login/login.page.scss
+++ b/front-end/src/app/pages/login/login.page.scss
@@ -6,7 +6,7 @@ ion-item {
   }
 
   #bg {
-    height: 50%;
+    height: 40%;
     width: 500px;
     background: var(--ion-color-dark) url('./../../../assets/imgs/gymWallPaperRedBlack.png')no-repeat center center/cover;
     border-radius: 0 0 45% 45%;
@@ -18,6 +18,19 @@ ion-fab {
         font-size: 2.5rem;
     }
 }
+
+.spin{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+ ion-spinner {
+    width: 50px;
+    height: 50px;
+    stroke: #444;
+    fill: #222;
+ }
 
 ion-list {
     margin-top: 6vh;
