--- a/front-end/src/app/pages/me/me.page.html
+++ b/front-end/src/app/pages/me/me.page.html
@@ -28,25 +28,25 @@
 
   <div class="div-1"  *ngIf="!this.loggeduserIsAdmin"> 
     <ion-item>      
-    <ion-label><h2>Gym Management</h2></ion-label>
+    <ion-label><h2>Property Management</h2></ion-label>
     <ion-icon slot="start"  name="barbell-sharp"></ion-icon>
        
     </ion-item> 
         <ion-list [inset]="true" lines="none">
           <ion-item>
             <ion-label>
-              <h2 color="primary">Gym Name : {{gymName}}</h2>
+              <h2 color="primary">Property Name : {{gymName}}</h2>
             </ion-label>
           </ion-item>
 
           <ion-item>
             <ion-label >
-              <h2 (click)="CallTel(gymEmergencyMobile)" color="primary">Gym Mobile No. : {{gymEmergencyMobile}}</h2>
+              <h2 (click)="CallTel(gymEmergencyMobile)" color="primary">Property Mobile No. : {{gymEmergencyMobile}}</h2>
             </ion-label>
           </ion-item>
 
           <ion-item>
-              <ion-label> Gym Location on Map</ion-label>              
+              <ion-label> Property Location on Map</ion-label>              
               <ion-icon slot="end"  name="chevron-forward-outline" (click)="gymLocation()"></ion-icon>
           </ion-item>
 
@@ -69,7 +69,7 @@
     </ion-item> 
 
     <ion-item *ngIf="isMessageFromAdmin">
-      <ion-label><h2 color="primary">Message From Gym Admin</h2></ion-label>
+      <ion-label><h2 color="primary">Message From Property Owner</h2></ion-label>
       <ion-icon slot="start" name="mail-unread"> </ion-icon>
     </ion-item>
   </div>
@@ -79,7 +79,7 @@
 
 <div class="div-1" *ngIf="!this.loggeduserIsAdmin">
   <ion-item class="ion-item" detail="true" (click)="feedbackAlert()">
-    <ion-label > Feedback or Suggestions</ion-label>
+    <ion-label > Feedback to Property Owner</ion-label>
     <ion-icon slot="start" name="reader-outline"></ion-icon>
   </ion-item> 
 </div>
