--- a/front-end/src/app/static/personalinformation/personalinformation.page.html
+++ b/front-end/src/app/static/personalinformation/personalinformation.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Previous" icon="caret-back" (click)="backToSettings()"></ion-back-button>
+      <ion-back-button text="Previous" icon="caret-back"></ion-back-button>
     </ion-buttons>
     <ion-title>Personal Information</ion-title>
   </ion-toolbar>  
@@ -14,8 +14,8 @@
     <span id="seconds"> {{  countdownSeconds  }} </span>Sec.
       <ion-button (click)="cancelCountDown()" expand="block" color="warning" shape="round"><strong>Cancel</strong></ion-button>
   </div>
-
-  <div *ngIf="!this.loggeduserIsAdmin">
+  
+  <div *ngIf="this.loggeduserIsMember">
   <ion-list [inset]="true" lines="none">
     <ion-item>
       <ion-label>Roll : {{memberType | uppercase}} </ion-label>
@@ -90,17 +90,16 @@
       <ion-label>Email : {{adminEmail | uppercase}}</ion-label>
     </ion-item>
 
-    <ion-item>
+    <!-- <ion-item>
       <ion-label>Mobile Number : {{adminMobile | uppercase}}</ion-label>
-    </ion-item>
+    </ion-item> -->
 
        
   </ion-list>
 </div>
 
-<!-- *ngIf="this.AdminCumMeber" -->
-<div >
-    
+<!--  -->
+<div *ngIf="this.AdminCumMember">    
       <ion-button 
       color="primary"
       expand="block"
@@ -116,21 +115,15 @@
     
 </div>
 
-<!-- <div>
-  <ion-list>
-    <ion-list-header>
-      <ion-label>Joined Property</ion-label>
-    </ion-list-header>
-
-    <ion-item>
-      <ion-label>Pokémon Yellow</ion-label>
-    </ion-item>
-  </ion-list>
-
+<div>
+  <ion-button
+    color="primary"
+    expand="block"
+    shape="round"
+    (click)="backToSettings()">
+    Back
+  </ion-button>
 </div>
-
-use this block for multiple gym join of member -->
-
 
 
 </ion-content>
